--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ ui-debug.log
 
 # Environment - Uncomment the line below if you want to keep Firebase config private
 # /src/environments/environment.ts
+.env
